Try to handle URLs and resolve to local path in D-Bus extraction service.

REVIEW:126233
BUG:294904